fix: change viewport height on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,8 @@
 }
 
 :root {
+  --vh: 1vh;
+
   --color-background: #000;
   --color-font: #FFF;
 
